--- a/FrameProject/app/src/main/res/layout/second.xml
+++ b/FrameProject/app/src/main/res/layout/second.xml
@@ -6,5 +6,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is second fragment" />
+        android:text="this is second fragment"
+        android:id="@+id/mytitle" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="open activity"
+        android:id="@+id/button"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
