--- a/FrameProject/app/src/main/res/layout/demo_listitem.xml
+++ b/FrameProject/app/src/main/res/layout/demo_listitem.xml
@@ -3,9 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/juemp"
+    <TextView
+        android:id="@+id/itemtextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jump" />
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/red_btn_bg_color"
+        android:textSize="40sp" />
 </LinearLayout>
