--- a/FrameProject/framelibrary/src/main/res/anim/error_frame_in.xml
+++ b/FrameProject/framelibrary/src/main/res/anim/error_frame_in.xml
@@ -10,7 +10,7 @@
         android:fromAlpha="0"
         android:toAlpha="1" />
 
-    <sweet:joe.framelibrary.frame.dialog.Rotate3dAnimation
+    <sweet:joe.frame.dialog.Rotate3dAnimation
         android:duration="400"
         sweet:fromDeg="100"
         sweet:pivotX="50%"
