--- a/FrameProject/app/src/main/res/layout/demo_second.xml
+++ b/FrameProject/app/src/main/res/layout/demo_second.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray">
 
     <TextView
         android:id="@+id/mytitle"
@@ -13,6 +15,19 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/view"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center_vertical"
+        android:layout_marginBottom="58dp"
         android:text="open activity" />
-</LinearLayout>
+
+    <joe.frame.view.RoundImageView
+        android:id="@+id/view"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/default_menu_background"
+        app:borderRadius="30dp"
+        app:type="round" />
+</RelativeLayout>
