--- a/FrameProject/framelibrary/src/main/res/values/attrs.xml
+++ b/FrameProject/framelibrary/src/main/res/values/attrs.xml
@@ -35,4 +35,12 @@
             <enum name="round" value="1" />
         </attr>
     </declare-styleable>
+
+    <!-- SwitchButton -->
+    <declare-styleable name="SwitchButton">
+        <attr name="isChecked" format="boolean" />
+        <attr name="offColor" format="color" />
+        <attr name="onColor" format="color" />
+        <attr name="btnColor" format="color" />
+    </declare-styleable>
 </resources>
