--- a/FrameProject/app/src/main/res/values/styles.xml
+++ b/FrameProject/app/src/main/res/values/styles.xml
@@ -5,31 +5,9 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <!-- Toolbar theme -->
-    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
-        <!--<item name="android:background">@color/turquoise</item>-->
-    </style>
-
-
-    <!-- sweet dialog -->
-    <style name="alert_dialog" parent="android:Theme.Dialog">
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowIsTranslucent">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">false</item>
-        <item name="android:windowBackground">@color/float_transparent</item>
-        <item name="android:windowAnimationStyle">@null</item>
-        <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:backgroundDimAmount">0.4</item>
-    </style>
-
-    <style name="dialog_blue_button" parent="android:Widget.Button">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">31dp</item>
-        <item name="android:background">@drawable/blue_button_background</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:paddingLeft">21dp</item>
-        <item name="android:paddingRight">21dp</item>
-        <item name="android:textColor">@color/button_text_color</item>
+    <style name="MenuTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColorPrimary">@color/blue</item>
+        <item name="android:textColorSecondary">@color/red</item>
+        <item name="android:background">@color/green</item>
     </style>
 </resources>
