--- a/FrameProject/framelibrary/src/main/res/layout/frame_activity_layout.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/frame_activity_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme" />
+        app:popupTheme="@style/PopupMenuTheme"
+        app:theme="@style/ToolbarTheme" />
 
     <FrameLayout
         android:id="@+id/rootlayout_baseactivity"
