--- a/FrameProject/framelibrary/src/main/res/values/dimens.xml
+++ b/FrameProject/framelibrary/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="alert_width">290dp</dimen>
     <dimen name="common_circle_width">3dp</dimen>
     <dimen name="progress_circle_radius">34dp</dimen>
+
+    <!-- Toolbar -->
+    <dimen name="toolbar_centertitle_size">20sp</dimen>
 </resources>
