--- a/FrameProject/framelibrary/src/main/res/layout/frame_activity_layout.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/frame_activity_layout.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,12 +20,12 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="@dimen/toolbar_centertitle_size" />
+            android:textSize="@dimen/toolbar_centertitle_size"/>
     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/rootlayout_baseactivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
