--- a/FrameProject/framelibrary/src/main/res/layout/alert_dialog.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/alert_dialog.xml
@@ -135,6 +135,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
+        android:maxLines="8"
+        android:scrollbars="vertical"
         android:textAlignment="center"
         android:textColor="#797979"
         android:textSize="@dimen/dialog_content_textSize"
