--- a/FrameProject/app/src/main/res/layout/demo_weblayout.xml
+++ b/FrameProject/app/src/main/res/layout/demo_weblayout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="jump"/>
+        android:text="切换Fragment"/>
 
     <ListView
         android:id="@+id/listView"
