--- a/FrameProject/app/src/main/res/layout/demo_second.xml
+++ b/FrameProject/app/src/main/res/layout/demo_second.xml
@@ -14,6 +14,15 @@
         android:layout_centerHorizontal="true"
         android:text="this is second fragment"/>
 
+    <joe.frame.view.CountdownView
+        android:id="@+id/countdown"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_above="@+id/button3"
+        android:layout_alignLeft="@+id/mytitle"
+        android:layout_alignStart="@+id/mytitle"
+        app:textColor="@color/red"/>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -27,12 +36,11 @@
     <joe.frame.view.RoundImageView
         android:id="@+id/view"
         android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:src="@mipmap/default_menu_background"
-        app:borderRadius="30dp"
-        app:type="round"/>
+        app:type="circle"/>
 
     <Button
         android:id="@+id/button3"
