--- a/FrameProject/app/src/main/res/layout/demo_weblayout.xml
+++ b/FrameProject/app/src/main/res/layout/demo_weblayout.xml
@@ -19,5 +19,15 @@
         android:layout_above="@+id/jump"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_below="@+id/view2"/>
+
+    <joe.frame.view.ClearEditText
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/black"
+        android:textSize="24sp"/>
 </RelativeLayout>
