--- a/FrameProject/app/src/main/res/values/styles.xml
+++ b/FrameProject/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="MyAppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimaryDark">@color/blue</item>
         <item name="android:textColorHint">#000000</item>
     </style>
 
