--- a/FrameProject/framelibrary/src/main/res/layout/alert_dialog.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/alert_dialog.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/loading"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:wheel="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/loading"
     android:layout_width="@dimen/alert_width"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -18,7 +17,7 @@
         android:layout_marginTop="5dp"
         android:contentDescription="@string/app_name"
         android:scaleType="fitCenter"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <FrameLayout
         android:id="@+id/error_frame"
@@ -30,7 +29,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/error_circle"/>
+            android:background="@drawable/error_circle" />
 
         <ImageView
             android:id="@+id/error_x"
@@ -38,7 +37,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
             android:scaleType="center"
-            android:src="@drawable/error_center_x"/>
+            android:src="@drawable/error_center_x" />
 
     </FrameLayout>
 
@@ -52,7 +51,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/success_bow"/>
+            android:background="@drawable/success_bow" />
 
         <View
             android:id="@+id/mask_right"
@@ -60,7 +59,7 @@
             android:layout_height="80dp"
             android:layout_gravity="right"
             android:layout_marginTop="-13dp"
-            android:background="@android:color/white"/>
+            android:background="@android:color/white" />
 
         <View
             android:id="@+id/mask_left"
@@ -68,17 +67,17 @@
             android:layout_height="60dp"
             android:layout_gravity="left"
             android:layout_marginLeft="-3dp"
-            android:background="@android:color/white"/>
+            android:background="@android:color/white" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/success_circle"/>
+            android:background="@drawable/success_circle" />
 
         <joe.frame.dialog.SuccessTickView
             android:id="@+id/success_tick"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
@@ -92,14 +91,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/warning_circle"/>
+            android:background="@drawable/warning_circle" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
             android:scaleType="center"
-            android:src="@drawable/warning_sigh"/>
+            android:src="@drawable/warning_sigh" />
     </FrameLayout>
 
     <FrameLayout
@@ -116,7 +115,7 @@
             android:layout_width="@dimen/progress_wheel_width_height"
             android:layout_height="@dimen/progress_wheel_width_height"
             android:layout_gravity="center"
-            wheel:matProg_progressIndeterminate="true"/>
+            wheel:matProg_progressIndeterminate="true" />
     </FrameLayout>
 
     <TextView
@@ -127,7 +126,7 @@
         android:singleLine="true"
         android:text="@string/dialog_default_title"
         android:textColor="#575757"
-        android:textSize="@dimen/dialog_title_textSize"/>
+        android:textSize="@dimen/dialog_title_textSize" />
 
     <TextView
         android:id="@+id/content_text"
@@ -140,7 +139,7 @@
         android:textAlignment="center"
         android:textColor="#797979"
         android:textSize="@dimen/dialog_content_textSize"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -149,16 +148,24 @@
         android:gravity="center">
 
         <Button
+            android:id="@+id/other_button"
+            style="@style/dialog_blue_button"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/gray_button_background"
+            android:text="@string/dialog_other"
+            android:visibility="gone" />
+
+        <Button
             android:id="@+id/cancel_button"
             style="@style/dialog_blue_button"
             android:layout_marginRight="10dp"
             android:background="@drawable/gray_button_background"
             android:text="@string/dialog_cancel"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/confirm_button"
             style="@style/dialog_blue_button"
-            android:text="@string/dialog_ok"/>
+            android:text="@string/dialog_ok" />
     </LinearLayout>
 </LinearLayout>
