修复demo无法运行的情况，给basefragment添加显示加载页面，加载完成再显示内容的功能

--- a/FrameProject/framelibrary/src/main/res/layout/frame_fragment_layout.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/frame_fragment_layout.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rootlayout_basefragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/lightgray">
+
+    <TextView
+        android:id="@+id/tv_loading_root_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/LOADING"
+        android:textSize="25sp" />
+
+    <FrameLayout
+        android:id="@+id/rootlayout_basefragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
