--- a/FrameProject/framelibrary/src/main/res/layout/frame_dialog_base.xml
+++ b/FrameProject/framelibrary/src/main/res/layout/frame_dialog_base.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +23,7 @@
             android:text="Title"
             android:textColor="#000000"
             android:textSize="@dimen/dialog_fragment_title_textSize"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/base_dialog_content"
@@ -37,7 +36,7 @@
             android:singleLine="false"
             android:text="content"
             android:textColor="@color/base_dialog_content_color"
-            android:textSize="@dimen/dialog_fragment_content_textSize"/>
+            android:textSize="@dimen/dialog_fragment_content_textSize" />
 
         <FrameLayout
             android:id="@+id/base_dialog_content_layout"
@@ -45,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/relativeLayout"
             android:layout_below="@+id/base_dialog_title"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
@@ -70,7 +69,7 @@
                 android:text="More Info"
                 android:textColor="@color/base_dialog_btn_color"
                 android:textSize="@dimen/dialog_fragment_btn_textSize"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/base_dialog_btn_cancel"
@@ -88,7 +87,7 @@
                 android:text="@string/dialog_btn_cancel"
                 android:textColor="@color/base_dialog_btn_color"
                 android:textSize="@dimen/dialog_fragment_btn_textSize"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/base_dialog_btn_ok"
@@ -104,7 +103,7 @@
                 android:text="@string/dialog_btn_ok"
                 android:textColor="@color/base_dialog_btn_color"
                 android:textSize="@dimen/dialog_fragment_btn_textSize"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
