部分代码优化
修改FrameBaseFragment的回退方法，优化MarqueeTextView的垂直滚动效果（自动换行）

--- a/FrameProject/app/src/main/res/layout/demo_weblayout.xml
+++ b/FrameProject/app/src/main/res/layout/demo_weblayout.xml
@@ -21,7 +21,7 @@
         android:layout_toRightOf="@+id/jump"
         android:paddingBottom="15px"
         android:paddingTop="15px"
-        android:text="这是一个跑马灯\n这是第二个跑马灯\n这是第三个跑马灯dafdsfasdfsdafdsafdsads"
+        android:text="这是一个跑马灯\n这是跑马灯的2号\n这是三号\n这是测试的fjdksfjksdafsdaf的打"
         android:textColor="@color/black"
         app:orientation="vertical"
         app:speed="0.3" />
