新增音量工具类以及带check状态的ImageView
新增音量工具类以及带check状态的ImageView

--- a/FrameProject/framelibrary/src/main/res/values/attrs.xml
+++ b/FrameProject/framelibrary/src/main/res/values/attrs.xml
@@ -72,4 +72,9 @@
             <enum name="horizontal" value="1" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="StatusButton">
+        <attr name="statusChecked" format="boolean" />
+        <attr name="statusSrc" format="reference" />
+    </declare-styleable>
 </resources>
