添加时间工具类中12、24小时切换

--- a/FrameProject/framelibrary/src/main/res/values/attrs.xml
+++ b/FrameProject/framelibrary/src/main/res/values/attrs.xml
@@ -67,7 +67,7 @@
     <declare-styleable name="MarqueeTextView">
         <attr name="speed" format="float" />
         <attr name="newLine" format="integer" />
-        <attr name="orientation">
+        <attr name="tv_orientation">
             <enum name="vertical" value="0" />
             <enum name="horizontal" value="1" />
         </attr>
