--- a/FrameProject/app/src/main/res/layout/demo_weblayout.xml
+++ b/FrameProject/app/src/main/res/layout/demo_weblayout.xml
@@ -18,8 +18,8 @@
         android:paddingTop="15px"
         android:text="这是一个跑马灯\n这是跑马灯的2号\n这是三号\n这是测试的fjdksfjksdafsdaf的打"
         android:textColor="@color/black"
-        app:orientation="vertical"
-        app:speed="0.3" />
+        app:speed="0.3"
+        app:tv_orientation="vertical" />
 
     <Button
         android:id="@+id/jump"
